--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               >
             </li>
             <li>
-              <a class="nav__link">Eventos</a>
+              <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Conviértete en miembro</a>
@@ -142,6 +142,96 @@
               </div>
             </li>
           </ul>
+        </section>
+        <section class="events" id="events">
+          <div class="events__content">
+            <h2 class="events__heading">Próximos eventos:</h2>
+            <h3 class="events__title">
+              En honor de Joan Feynman: mujeres en la astrofísica
+            </h3>
+            <div class="event-info events__info-section">
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_calendar.svg"
+                  alt="Calendar icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">Lunes 12 de enero</p>
+              </div>
+              <div class="event-info__item">
+                <img
+                  src="./images/icon_pin.svg"
+                  alt="Pin icon"
+                  class="event-info__icon"
+                />
+                <p class="event-info__text">
+                  Sala de conferencias y virtual de la biblioteca Triple Peaks
+                </p>
+              </div>
+            </div>
+            <p class="events__description">
+              En este evento, en el que celebramos el nombre de nuestra
+              biblioteca, nuestra invitada nos llevará a través de un viaje para
+              conocer a algunas de las mujeres investigadoras más importantes en
+              el mundo de la ciencia espacial. Es fácil caer en la falsa idea de
+              que este campo está principalmente dominado por hombres, pero
+              nuestra conferencia busca cambiar esa noción y probar que no ha
+              sido así desde, al menos, el siglo XVII.
+            </p>
+            <a href="#" class="events__more">Más eventos &rarr;</a>
+          </div>
+
+          <div class="events__cover">
+            <img
+              src="./web_project_3__images/web_project_3_images/cafe.png"
+              alt="Imagen de una cafeteria en caricatura"
+              class="events__image"
+            />
+            <div class="person person_name_feynman">
+              <p class="person_caption">Joan Feynman</p>
+              <img
+                src="./web_project_3__images/web_project_3_images/person_feynman.png"
+                alt="Foto de Feynman"
+                class="person__image person__image_size_l"
+              />
+            </div>
+
+            <div class="person person_name_burbidge">
+              <p class="person_caption">Margaret Burbidge</p>
+              <img
+                src="./web_project_3__images/web_project_3_images/person_burbidge.png"
+                alt="Foto de Margaret Burbidge"
+                class="person__image person__image_size_m"
+              />
+            </div>
+
+            <div class="person person_name_cannon">
+              <p class="person_caption">Annie Jump Cannon</p>
+              <img
+                src="./web_project_3__images/web_project_3_images/person_cannon.png"
+                alt=" Foto de Annie Jump Cannon"
+                class="person__image person__image_size_m"
+              />
+            </div>
+
+            <div class="person person_name_mitchell">
+              <p class="person_caption">Maria Mitchell</p>
+              <img
+                src="./web_project_3__images/web_project_3_images/person_mitchell.png"
+                alt="Foto de Maria Mitchell"
+                class="person__image person__image_size_s"
+              />
+            </div>
+
+            <div class="person person_name_tarter">
+              <p class="person_caption">Jill Tarter</p>
+              <img
+                src="./web_project_3__images/web_project_3_images/person_tarter.png"
+                alt="Foto de Jill Tarter"
+                class="person__image person__image_size_s"
+              />
+            </div>
+          </div>
         </section>
       </main>
     </div>
