--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               class="events__image"
             />
             <div class="person person_name_feynman">
-              <p class="person_caption">Joan Feynman</p>
+              <p class="person__caption">Joan Feynman</p>
               <img
                 src="./web_project_3__images/web_project_3_images/person_feynman.png"
                 alt="Foto de Feynman"
@@ -197,7 +197,7 @@
             </div>
 
             <div class="person person_name_burbidge">
-              <p class="person_caption">Margaret Burbidge</p>
+              <p class="person__caption">Margaret Burbidge</p>
               <img
                 src="./web_project_3__images/web_project_3_images/person_burbidge.png"
                 alt="Foto de Margaret Burbidge"
@@ -206,7 +206,7 @@
             </div>
 
             <div class="person person_name_cannon">
-              <p class="person_caption">Annie Jump Cannon</p>
+              <p class="person__caption">Annie Jump Cannon</p>
               <img
                 src="./web_project_3__images/web_project_3_images/person_cannon.png"
                 alt=" Foto de Annie Jump Cannon"
@@ -215,7 +215,7 @@
             </div>
 
             <div class="person person_name_mitchell">
-              <p class="person_caption">Maria Mitchell</p>
+              <p class="person__caption">Maria Mitchell</p>
               <img
                 src="./web_project_3__images/web_project_3_images/person_mitchell.png"
                 alt="Foto de Maria Mitchell"
@@ -224,7 +224,7 @@
             </div>
 
             <div class="person person_name_tarter">
-              <p class="person_caption">Jill Tarter</p>
+              <p class="person__caption">Jill Tarter</p>
               <img
                 src="./web_project_3__images/web_project_3_images/person_tarter.png"
                 alt="Foto de Jill Tarter"
