--- a/index.html
+++ b/index.html
@@ -233,6 +233,95 @@
             </div>
           </div>
         </section>
+        <section class="membership">
+          <h2 class="membership__title">
+            ¡Convertirse en miembro es muy fácil!
+          </h2>
+          <ul class="membership__steps">
+            <li class="step">
+              <h3 class="step__title">
+                Paso 1
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Completa el formulario de afiliación en línea o en persona.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 2
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                Ven y recoge tu credencial de la biblioteca en la recepción.
+              </p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 3
+                <img
+                  src="./images/icon_step_forward.svg"
+                  alt="icon forward"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">Firma el envés de la tarjeta.</p>
+            </li>
+            <li class="step">
+              <h3 class="step__title">
+                Paso 4
+                <img
+                  src="./images/icon_step_finish.svg"
+                  alt="icon finish"
+                  class="step__icon"
+                />
+              </h3>
+              <p class="step__description">
+                ¡Disfruta de los increíbles beneficios de nuestra membresía!
+              </p>
+            </li>
+          </ul>
+        </section>
+        <footer class="footer">
+          <div class="footer__columns">
+            <div class="footer__column">
+              <img
+                class="footer__logo"
+                src="./images/logo.svg"
+                alt="Logo de Tripleten"
+              />
+            </div>
+            <div class="footer__column footer__column_content_hours">
+              <header class="footer__column-heading">
+                Horario de Apertura
+              </header>
+              <ul class="footer_list">
+                <li class="footer__list-item">Lunes a viernes: 9 a.m -8 p.m</li>
+                <li class="footer__list-item">
+                  Sabados y Domingos: 10 a.m -6 p.m
+                </li>
+              </ul>
+            </div>
+            <div class="footer__column footer__column_content_social">
+              <header class="footer__column-heading">Redes Sociales</header>
+              <ul class="footer__list">
+                <li class="footer__list-item">Facebook</li>
+                <li class="footer__list-item">Instagram</li>
+              </ul>
+            </div>
+            <div class="footer__copyright">
+              <p>© 2024 Sofia Gonzalez</p>
+            </div>
+          </div>
+        </footer>
       </main>
     </div>
   </body>
