--- a/index.html
+++ b/index.html
@@ -290,56 +290,58 @@
             </li>
           </ul>
         </section>
-        <footer class="footer" id="footer">
-          <div class="footer__cover">
-            <div class="footer__columns">
-              <div class="footer__column">
-                <img
-                  class="footer__logo"
-                  src="./web_project_3__images/web_project_3_images/logo_white.svg"
-                  alt="Logo de Tripleten"
-                />
+        <section class="footer">
+          <footer class="footer" id="footer">
+            <div class="footer__cover">
+              <div class="footer__columns">
+                <div class="footer__column">
+                  <img
+                    class="footer__logo"
+                    src="./web_project_3__images/web_project_3_images/logo_white.svg"
+                    alt="Logo de Tripleten"
+                  />
+                </div>
+                <div class="footer__column footer__column_content_hours">
+                  <h3 class="footer__column-heading">Horario de Apertura</h3>
+                  <ul class="footer__list">
+                    <li class="footer__list-item">
+                      Lunes a viernes: 9 a.m -8 p.m
+                    </li>
+                    <li class="footer__list-item">
+                      Sabados y Domingos: 10 a.m -6 p.m
+                    </li>
+                  </ul>
+                </div>
+                <div class="footer__column footer__column_content_social">
+                  <h3 class="footer__column-heading">Redes Sociales</h3>
+                  <ul class="footer__list">
+                    <li class="footer__list-item">
+                      <a href="#" class="footer footer_column-link">
+                        <img
+                          src="./web_project_3__images/web_project_3_images/facebook_white.svg"
+                          alt="Facebook logo"
+                          class="footer__social-icon"
+                        />
+                        "Facebook"
+                      </a>
+                    </li>
+                    <li class="footer__list-item">
+                      <a href="#" class="footer__column-link">
+                        <img
+                          src="./web_project_3__images/web_project_3_images/instagram_white.svg"
+                          alt="Instagram logo"
+                          class="footer__social-icon"
+                        />
+                        "Instagram"
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
-              <div class="footer__column footer__column_content_hours">
-                <h3 class="footer__column-heading">Horario de Apertura</h3>
-                <ul class="footer__list">
-                  <li class="footer__list-item">
-                    Lunes a viernes: 9 a.m -8 p.m
-                  </li>
-                  <li class="footer__list-item">
-                    Sabados y Domingos: 10 a.m -6 p.m
-                  </li>
-                </ul>
-              </div>
-              <div class="footer__column footer__column_content_social">
-                <h3 class="footer__column-heading">Redes Sociales</h3>
-                <ul class="footer__list">
-                  <li class="footer__list-item">
-                    <a href="#" class="footer_column-link">
-                      <img
-                        src="./web_project_3__images/web_project_3_images/facebook_white.svg"
-                        alt="Facebook logo"
-                        class="footer__social-icon"
-                      />
-                      "Facebook"
-                    </a>
-                  </li>
-                  <li class="footer__list-item">
-                    <a href="#" class="footer__column-link">
-                      <img
-                        src="./web_project_3__images/web_project_3_images/instagram_white.svg"
-                        alt="Instagram logo"
-                        class="footer__social-icon"
-                      />
-                      "Instagram"
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <p class="footer__copyright">© 2024 Sofia Gonzalez</p>
             </div>
-            <p class="footer__copyright">© 2024 Sofia Gonzalez</p>
-          </div>
-        </footer>
+          </footer>
+        </section>
       </main>
     </div>
   </body>
