--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             </div>
           </div>
         </section>
-        <section class="membership">
+        <section class="membership" id="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -314,7 +314,7 @@
               <h3 class="footer__column-heading">Redes Sociales</h3>
               <ul class="footer__list">
                 <li class="footer__list-item">
-                  <a href="#" class="footer footer_column-link">
+                  <a href="#" class="footer footer__column-link">
                     <img
                       src="./web_project_3__images/web_project_3_images/facebook_white.svg"
                       alt="Facebook logo"
@@ -324,7 +324,7 @@
                   </a>
                 </li>
                 <li class="footer__list-item">
-                  <a href="#" class="footer__column-link">
+                  <a href="#" class="footer footer__column-link">
                     <img
                       src="./web_project_3__images/web_project_3_images/instagram_white.svg"
                       alt="Instagram logo"
