project 3 final of finals of all finals

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
           <div class="footer__columns">
             <div class="footer__column">
               <img
-                src="./web_project_3__images/web_project_3_images/logo_white.svg"
+                src="images/logo_white.svg"
                 alt="Logo de Tripleten"
                 class="footer__logo"
               />
@@ -306,7 +306,7 @@
               <ul class="footer__list">
                 <li class="footer__list-item">Lunes a viernes: 9 a.m -8 p.m</li>
                 <li class="footer__list-item">
-                  Sabados y Domingos: 10 a.m -6 p.m
+                  Sábados y Domingos: 10 a.m -6 p.m
                 </li>
               </ul>
             </div>
@@ -314,23 +314,23 @@
               <h3 class="footer__column-heading">Redes Sociales</h3>
               <ul class="footer__list">
                 <li class="footer__list-item">
-                  <a href="#" class="footer footer__column-link">
+                  <a href="#" class="footer__column-link">
                     <img
-                      src="./web_project_3__images/web_project_3_images/facebook_white.svg"
-                      alt="Facebook logo"
+                      src="images/facebook_white.svg"
+                      alt="Icono de Facebook"
                       class="footer__social-icon"
                     />
-                    "Facebook"
+                    Facebook
                   </a>
                 </li>
                 <li class="footer__list-item">
-                  <a href="#" class="footer footer__column-link">
+                  <a href="#" class="footer__column-link">
                     <img
-                      src="./web_project_3__images/web_project_3_images/instagram_white.svg"
-                      alt="Instagram logo"
+                      src="images/instagram_white.svg"
+                      alt="Icono de Instagram"
                       class="footer__social-icon"
                     />
-                    "Instagram"
+                    Instagram
                   </a>
                 </li>
               </ul>
