project 3 html and css

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
               <a href="#events" class="nav__link">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Conviértete en miembro</a>
+              <a href="#membership" class="nav__link">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link">Contactos</a>
+              <a href="#Contacts" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
