project 3 html css 2

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a href="#membership" class="nav__link">Conviértete en miembro</a>
             </li>
             <li>
-              <a href="#Contacts" class="nav__link">Contactos</a>
+              <a href="#footer" class="nav__link">Contactos</a>
             </li>
           </ul>
         </nav>
